force-app/main/default/objects/SurveyTaker__c/fields/Survey_Taken_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Survey Taken Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>