force-app/main/default/objects/SurveyTaker__c/fields/Taken__c.field-meta.xml
<CustomField>
    <fullName>Taken__c</fullName>
    <description>Whether the survey was taken or not</description>
    <label>Taken</label>
    <length>10</length>
    <type>Text</type>
</CustomField>