force-app/main/default/objects/SurveyTaker__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Taken By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>