force-app/main/default/objects/SurveyTaker__c/listViews/Delivery_Surveys_Taken.listView-meta.xml
<ListView>
    <fullName>Delivery_Surveys_Taken</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Survey__c</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey__c</field>
        <operation>contains</operation>
        <value>Delivery</value>
    </filters>
    <label>Delivery Surveys Taken</label>
</ListView>