force-app/main/default/objects/SurveyTaker__c/listViews/Q4_2018_and_Onwards_CS_Survey.listView-meta.xml
<ListView>
    <fullName>Q4_2018_and_Onwards_CS_Survey</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>User__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Case__c</columns>
    <columns>Number__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey__c</field>
        <operation>equals</operation>
        <value>Customer Satisfaction Survey - 01/10/2018 - 01/01/2019</value>
    </filters>
    <label>Q4 2018 and Onwards - CS Survey</label>
    <sharedTo>
        <role>Global_Service_Desk_Level_2</role>
    </sharedTo>
</ListView>